css/style.css
<!-- Stylesheet by Jeffrey Grinberg -->
.body {
	font-family: 'Open Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
}
.fixed {
	background-color: #034660;
	position:fixed;
	top:0;
	left:0;
	z-index:2;
	width:100%;	
}
/*Header Section*/
.header {
	height: 190px;
	/*background-color: #6991AC;*/
	font-family: 'Open Sans', sans-serif;
}
.header .header-info {
	text-align: center;
	padding-top: 30px;
}
.header .header-title {
	font-family: 'Open Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
	letter-spacing: 1.01px;
	font-size: 40px;
	font-weight: 400;
	color: #F5F5F5;
}
.header .logo li {
	display: inline-block;
	text-align: center;
	list-style-type: none;
}
.header h5 {
	font-size: 13px;
	color: #F5F5F5;
}
/*Middle Section*/
.middle {
	height: 100%;
}
.middle ul li {
	list-style: none;
	display: inline;
}
.middle #reset-button {
	padding-top: 20px;
	text-align: center;
}
.middle .reset-list {
	width: 100px;
	height: 30px;
	border-radius: 9px;
	border: 2px solid #F5F5F5;
	background-color: transparent;
	color: white;
}
.middle input {
	width: 40%;
	height: 23px;
	text-align: center;
	border-radius: 9px;
	border: 2px solid #F5F5F5;
	background-color: transparent;
	color: white;
	margin-right: 2rem; 
}
::-webkit-input-placeholder {
   color: white;
}
:-moz-placeholder {
   color: white;  
}
::-moz-placeholder {
   color: white;  
}
:-ms-input-placeholder {  
   color: white;  
}
.middle .list {
	text-align: center;
	padding-top: 15px;
}
.middle .list p {
	display: inline-block;
	text-align: center;
	width: 80%;
	height: 30px;
	margin-top: 10px;
	border-radius: 9px;
	line-height: 25pt;
	color: white;
}
.deleteicon {
	float: left;
	margin: 5px 0 0 8px;
	background-image: url(../images/timessvg.svg);
	background-size: contain;
	height: 20px;
	width: 20px;
	cursor: pointer;
}
.checkicon {
	float: right;
	margin: 5px 8px 0 0;
	background-image: url(../images/checksvg.svg);
	background-size: contain;
	height: 20px;
	width: 20px;
	cursor: pointer;
}
.nostrike {
	border: 2px solid #F5F5F5;
	background-color: transparent;
}
.undoicon {
	float: right;
	margin: 5px 8px 0 0;
	background-image: url(../images/undosvg.svg);
	background-size: contain;
	height: 20px;
	width: 20px;
	cursor: pointer;
}
.strikethrough {
	color: #4A5674;
	background-color: #2F9BA7;
	border: 2px solid #2F9BA7;
	text-decoration': line-through;
}
#container { /*Push footer down.*/
	padding-bottom: 25px;
}
/*Make responsive*/

@media only screen
and (min-device-width : 320px) 
and (max-device-width : 480px) {
	input[type='text'],
	input[type='number'],
	textarea {
 		 font-size: 16px;
	}
#reset-button .new-item {
		height: 50px;
		width: 90%;
		margin-bottom: 15px;
	}
#reset-button .reset-list {
	height: 56px;
	}
	.middle .list p {
		width: 100%;
		height: 50px;
		line-height: 40pt;
		font-size: 14px;
	}
	.deleteicon, .undoicon, .checkicon {
		height: 50px;
		width: 50px;
	}
	.deleteicon {
		margin:	1px 0 0 1px;
	}
	.undoicon, .checkicon {
		margin: 1px 3px 0 0;
	}
}
body { 
    transition:all .2s linear; 
    -o-transition:all .2s linear; 
    -moz-transition:all .2s linear; 
    -webkit-transition:all .2s linear;
}

@media (max-width: 870px) {
		input[type='text'],
	input[type='number'],
	textarea {
 		 font-size: 16px;
	}
#reset-button .new-item {
		height: 50px;
		width: 90%;
		margin-bottom: 15px;
	}
#reset-button .reset-list {
	height: 56px;
	}
	.middle .list p {
		width: 98%;
		height: 50px;
		line-height: 40pt;
		font-size: 14px;
	}
	.deleteicon, .undoicon, .checkicon {
		height: 50px;
		width: 50px;
	}
	.deleteicon {
		margin:	1px 0 0 1px;
	}
	.undoicon, .checkicon {
		margin: 1px 3px 0 0;
	}
}

